k8s/borked/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borked
  labels:
    app: borked
  namespace: borked
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borked
  template:
    metadata:
      labels:
        app: borked
    spec:
      containers:
      - name: web
        image: charlieegan3/borked:210c4c20eb6a5d20c0c45d2cced7d60b
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "50m"
          requests:
            cpu: "50m"
