k8s/borked/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: borked
  name: borked
  namespace: borked
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: borked
  sessionAffinity: None
  type: ClusterIP
